syntax = "proto3";



option go_package = "mssqlparser.comms";

message FileDetails {
    string Mdffile = 1;
    string Ldffile = 2;
}

message MTFDetails {
    string MtfFile = 1;
}

message Table {
    string Name = 1;
}

message TablesMSG {
    repeated Table Tables = 1;
}

service FileProcessor {
    rpc Process(FileDetails) returns (stream Table){}
    rpc ProcessMTF(MTFDetails) returns (TablesMSG){}
   
}

